# llvm-wheels

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  llvm-post-install.sh  pyproject.toml  set_llvm_version.py
llvm-post-install/: CMakeLists.txt
src/llvm/: __init__.py  llvm_version.pyi
src/llvm/llvm_lib/: __init__.py
src/llvm/mlir_c_lib/: __init__.py
src/llvm/mlir_lib/: __init__.py
