cmake_minimum_required(VERSION 3.20)
project(llvm-post-install VERSION 24)

message(WARNING "${LLVM_INSTALL_PATH}/lib/cmake")

find_package(LLVM REQUIRED
  PATHS ${LLVM_INSTALL_PATH}/lib/cmake
  NO_DEFAULT_PATH
)

file(GENERATE
  OUTPUT "${LLVM_INSTALL_PATH}/llvm_version.py"
  CONTENT
  "\
LLVM_VERSION_MAJOR = \"${LLVM_VERSION_MAJOR}\"\n\
LLVM_VERSION_MINOR = \"${LLVM_VERSION_MINOR}\"\n\
LLVM_VERSION_PATCH = \"${LLVM_VERSION_PATCH}\"\n\
LLVM_VERSION_SUFFIX = \"${LLVM_VERSION_SUFFIX}\"\n\
LLVM_PACKAGE_VERSION = \"${LLVM_PACKAGE_VERSION}\"\n\
LLVM_SONAME_SUFFIX = \"${LLVM_VERSION_MAJOR}.${LLVM_VERSION_MINOR}${LLVM_VERSION_SUFFIX}\"\n"
)
